--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,7 @@
     name: "clickhouse-server"
     state: restarted
   become: true
+
+- name: reload systemd daemon
+  systemd:
+    daemon_reload: true
