--- a/tasks/precheck_yum.yml
+++ b/tasks/precheck_yum.yml
@@ -14,3 +14,30 @@
   changed_when: False
   check_mode: no
   with_items: "{{ clickhouse_package }}"
+
+- name: "Create systemd env config"
+  template:
+    src: "clickhouse-server.env.j2"
+    dest: "/etc/default/clickhouse-server"
+    mode: 0644
+    owner: root
+    group: root
+  become: yes
+  when: ansible_service_mgr == 'systemd'
+  tags: [install]
+  notify:
+    - restart-ch
+
+- name: "Create systemd config"
+  template:
+    src: "clickhouse-server.service.j2"
+    dest: "/etc/systemd/system/clickhouse-server.service"
+    mode: 0644
+    owner: root
+    group: root
+  become: yes
+  when: ansible_service_mgr == 'systemd'
+  tags: [install]
+  notify:
+    - systemd daemon reload
+    - restart-ch
