--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,10 +42,12 @@ clickhouse_interserver_http: 9009
 clickhouse_networks_default:
   - "::1"
   - "127.0.0.1"
+clickhouse_users_default_password: ""
+clickhouse_users_readonly_password: ""
 
 clickhouse_users_default:
-  - { name: "default", password: "", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Default user for login if user not defined" }
-  - { name: "readonly", password: "", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Example of user with readonly access" }
+  - { name: "default", password: "{{ clickhouse_users_default_password }}", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Default user for login if user not defined" }
+  - { name: "readonly", password: "{{ clickhouse_users_readonly_password }}", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Example of user with readonly access" }
 
 #Full form { name:'<username>', password: '<plainpassword>', password_sha256_hex: '<sha256password>',
 #   networks:"<{} with nets>", profile:'<profile>', quota:'<quota>', dbs: '{} with dbs', comment: '<some comment>'}
