--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,7 +46,7 @@ clickhouse_users_default_password: ""
 clickhouse_users_readonly_password: ""
 
 clickhouse_users_default:
-  - { name: "default", password: "{{ clickhouse_users_default_password }}", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Default user for login if user not defined" }
+  - { name: "default", password: "{{ clickhouse_users_default_password }}", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", access_management: 1, comment: "Default user for login if user not defined" }
   - { name: "readonly", password: "{{ clickhouse_users_readonly_password }}", networks: "{{ clickhouse_networks_default }}", profile: "default", quota: "default", comment: "Example of user with readonly access" }
 
 #Full form { name:'<username>', password: '<plainpassword>', password_sha256_hex: '<sha256password>',
