--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -116,3 +116,5 @@ clickhouse_hdfs_nn1: master1
 clickhouse_hdfs_nn2: master2
 clickhouse_hdfs_rpc_port: 8020
 clickhouse_hdfs_http_port: 50070
+
+clickhouse_root_client_config: true
